public static class PlayerAnimationNames
{
    public static string _speedName = "Speed";
    public static string _xVelocityName = "X_Velocity";
    public static string _yVelocityName = "Y_Velocity";
    public static string _focusName = "CanFocus";
    public static string _rolling = "CanRoll";
    public static string _attackName = "Attack";
    public static string _attackIDName = "AttackID";
    public static string _superAttackName = "SupperAttack";
}